Changes of Test::Snapshots


    Add lots of test cases
    Add lots of documentation
    Multiple test cases
    Check exit code as well
    Uploaded to Github

v0.01 2009.04.09
    First version released to CPAN